--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 .App {
-  /* display: flex; */
-  /* flex-wrap: wrap; */
-  justify-content: center; 
-  align-items: center;
-  /* height: 100vh; */
-  gap: 20px;
+  
   /* background-color: rgb(203,183,183,0.3); */
 }
 
-.dropdown{
-
-  justify-items: center;
-  margin: 40px; 
+.semi-class{
+  margin: 32px;
+  /* justify-items: center;
+  margin: 40px;  */
   /* only for deployed purpose */
+}
+
+.navabar-components-class{
+  margin-bottom: 20px;
 }
