--- a/src/components/dropdown/dropdownFive/TagdropperDropdown.css
+++ b/src/components/dropdown/dropdownFive/TagdropperDropdown.css
@@ -1,26 +1,89 @@
-.main-conotainer-main-container-wrapper-class {
+
+.main-container-dropdown{
   width: 400px;
-
+  position: relative;
   height: fit-content;
+  outline: none; /* Remove the default focus outline */
+  border: none;
+  background-color: none;
+  margin: 32px;
+  box-shadow: 0px 1px 2px 0px #1018280D;
 }
 
-#div-input-container-input {
-  box-shadow: none;
-  border: none;
-  height: 20px;
-  margin: -3px;
+
+
+
+.main-container-wrapper-class{
+  width: 400px;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  position: relative;
+  color: #333;
+  cursor:pointer;
+  outline: none;
+  border: 1px solid #d0d5dd;
+  border-radius: 6px;
+  transition: box-shadow 0.3s ease;
+  background-color: none;
+  margin-bottom: 2.5px;
+  /* border: 1px solid #d6bbfb;
+    box-shadow: 0px 0px 0px 3px rgba(214, 187, 251, 0.3); */
 }
+
+.focused{
+  border: 1px solid #d6bbfb;
+  box-shadow: 0px 0px 0px 3px rgba(214, 187, 251, 0.3);
+}
+
+.labeltext{
+  position: absolute;
+  top: -0.9rem;
+  left: 0.625rem;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  background: white;
+  padding: 0 0.3125rem;
+}
+
+.hidden{
+  display: none;
+}
+
 
 .input-box-container {
-  align-items: center;
-  align-content: center;
   width: 400px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   height: auto;
+  align-items: center;
+  align-content: center;
   min-height: 40px;
-  /* gap: 8px; */
+}
+
+.selected-value{
+  min-height: 20px;
+}
+
+input{
+  border: none;
+  outline: none;
+  box-shadow: none;
+  background-color: none;
+  padding: 4px;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .checker-inside-contianer {
@@ -28,27 +91,12 @@
   flex-direction: row;
   flex-wrap: wrap;
   flex-direction: row;
+  align-items: center;
   margin: 8px;
   gap: 8px;
 }
 
-.main-container-wrapper-class {
-  width: 400px;
-  /* height: 66px; */
-  position: relative;
-  color: #333;
-  cursor: default;
-  outline: none;
-  border: 1px solid #d0d5dd;
-  /* border: 1px solid #d6bbfb;
-    box-shadow: 0px 0px 0px 3px rgba(214, 187, 251, 0.3); */
-  border-radius: 8px;
-}
 
-input:focus {
-  border: 1px solid #d6bbfb;
-  box-shadow: 0px 0px 0px 3px rgba(214, 187, 251, 0.3);
-}
 
 .input-text-box-inside-div {
   outline: none;
@@ -58,36 +106,24 @@ input:focus {
 .arrow {
   display: block;
   position: absolute;
- 
   right: 26px;
- 
-  top: 11px;
-
+  top:  13px;
   width: 0;
 }
 
 .main-container-wrapper-class:focus {
   outline: none;
-
   border: 1px solid #d6bbfb;
-
   box-shadow: 0px 0px 0px 3px rgba(214, 187, 251, 0.3);
-
   outline: none;
 }
 
 .options {
   width: 400px;
   display: none;
-  /* color: #eaecf0; */
-  /* background-color: rgb(245, 245, 245); */
   border: 1px solid #eaecf0;
-  /* box-sizing: border-box; */
-  /* box-shadow: 0px 4px 6px -2px #10182808; */
-  /* box-shadow: 0px 12px 16px -4px #10182814; */
   max-height: 200px;
   overflow-y: auto;
-  position: absolute;
   border-radius: 8px;
 }
 
@@ -107,7 +143,6 @@ input:focus {
   overflow-y: auto;
   position: absolute;
   top: 100%;
-  /* width: 100%; */
   z-index: 1;
   border-radius: 8px;
   outline: none;
@@ -137,58 +172,42 @@ input:focus {
 .main-container-wrapper-class .option.selected,
 .main-container-wrapper-class .option:hover {
   background: #f9fafb;
-
   outline: none;
-
-  /* color: #333; */
 }
 
 .option-div-data {
-  text-align: center;
-
-  width: 366px;
-
-  height: 48px;
-
-  padding: 2px 6px 2px 6px;
-
-  font-family: Inter;
-
-  font-size: 16px;
-
-  font-weight: 500;
-
-  line-height: 24px;
-
-  letter-spacing: 0em;
-
-  text-align: left;
-
   display: flex;
-
   flex-direction: row;
-
+  justify-content: space-between;
+  text-align: center;
+  width: 366px;
+  height: 48px;
+  padding: 2px 6px 2px 6px;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
   margin-left: 5px;
-
   align-items: center;
 }
 
 .options-data-single {
   display: flex;
-
   gap: 8px;
 }
 
 .option-selected {
   background: #f9fafb;
-
   justify-items: auto;
-
   border: 0px solid black;
-
   border-radius: 2px;
 }
 
 .tick-icon-class-container {
   margin-right: 12px;
 }
+
