--- a/src/components/dropdown/dropdownFive/tag.css
+++ b/src/components/dropdown/dropdownFive/tag.css
@@ -11,6 +11,7 @@
     justify-content: center;
 }
  .tag-content {
+    font-family: Inter;
     color: #344054;
     font-size: 14px;
     font-weight: 500;
