--- a/src/components/dropdown/dropdownFive/tag.css
+++ b/src/components/dropdown/dropdownFive/tag.css
@@ -11,11 +11,12 @@
     justify-content: center;
 }
  .tag-content {
+    
     font-family: Inter;
     color: #344054;
-    font-size: 14px;
+    /* font-size: 14px;
     font-weight: 500;
-    line-height: 20px;
+    line-height: 20px; */
     letter-spacing: 0em;
     text-align: center;
 }
